test/netlist/error/pipe-nested-arity.bop
C(e, f) = out
where
  out = and(e, external("./external.exe", f));
end where;
